--- a/css/main.css
+++ b/css/main.css
@@ -212,7 +212,7 @@ nav ul {
     animation: animateNav linear infinite;
   }
   &:hover li a span {
-    opacity: 0.15;
+    opacity: 0.25;
     animation-play-state: paused;
   }
   & li ul {
@@ -262,13 +262,14 @@ nav ul {
     }
   }
 }
+
 .navigation.active-scroll {
   top: -80px;
 }
 @keyframes animateNav {
   0%,
   20% {
-    color: #fff2;
+    color: #ffffff1b;
     filter: drop-shadow(0 0 0px var(--clr));
   }
   21.001%,
@@ -278,7 +279,7 @@ nav ul {
   }
   80%,
   100% {
-    color: #fff2;
+    color: #ffffff1b;
     filter: drop-shadow(0 0 0px var(--clr));
   }
 }
