--- a/css/repertoire.css
+++ b/css/repertoire.css
@@ -12,13 +12,13 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 200vh;
+  min-height: 200vh;
   overflow: hidden;
 }
 
 article {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
   text-align: center;
   padding: 2vh 0px;
   &.performances {
