--- a/css/troupe.css
+++ b/css/troupe.css
@@ -2,6 +2,7 @@
 .troupe .troupe__hero {
   display: flex;
   position: relative;
+  flex-wrap: wrap;
   /* z-index: 3; */
   /* width: 100%; */
   /* padding: 50px; */
