--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
+  /* outline: 2px solid red; */
   /* scroll-behavior: smooth; */
 }
+html,
 body {
   overflow-x: hidden;
+  overflow-y: auto;
+  overscroll-behavior: none; /* !Запрети "резиновую прокрутку" (overscroll) */
   font-family: var(--font-text);
   &::-webkit-scrollbar {
     width: 0;
@@ -150,6 +153,10 @@ p {
 }
 /*  TODO: "header" */
 .header {
+  backface-visibility: hidden; /* !помогает в ряде моб. браузеров, чтобы спрятанный элемент не создавал "тень" над док. */
+  will-change: transform; /*! Глюки на iOS Safari */
+  transform: translateY(0);
+  transition: transform 0.3s ease;
   position: fixed;
   top: 5px;
   left: 0px;
@@ -159,10 +166,11 @@ p {
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  transition: var(--transition);
+  /* transition: var(--transition); */
 }
 .header.active-scroll {
-  top: -80px;
+  /* top: -80px; */
+  transform: translateY(-60px);
 }
 /* TODO: "navigation" */
 .navigation {
@@ -227,8 +235,8 @@ nav ul {
     /* opacity: 0; */
     /* visibility: hidden; */
     transition: 0.5s;
-    /* transform: translate(0, -40px); */
-    transform: translateY(-80px);
+    transform: translateY(-60px);
+    /* transform: translateY(-80px); */
     /* & li {
       display: block;
       width: 200px;
@@ -264,7 +272,9 @@ nav ul {
 }
 
 .navigation.active-scroll {
-  top: -80px;
+  transform: translateY(-60px);
+  /* top: -20px; */
+  /* transform: translateY(-80px); */
 }
 @keyframes animateNav {
   0%,
