--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Arizonia&display=swap");
+
 :root {
   --container-width: 1280px;
   --container-padding-x: 15px;
@@ -6,6 +8,10 @@
   --font-title: "Pattaya", serif; /* "Pattaya" "Pacifico"*/
   --font-text: "Merriweather", serif;
   --font-page: "Great Vibes", serif;
+
+  --font-logo: "Arizonia", cursive;
+  --text-shadow: 3px 2px 2px rgba(0, 0, 0, 0.2);
+  --branding-color: #6c63ff;
 
   --color-p: #fff;
 
@@ -91,6 +97,36 @@ p {
 }
 .none {
   display: none;
+}
+/* TODO:logo-tbut */
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  /* padding: 8px; */
+  text-align: center;
+  z-index: 1;
+}
+.logo-tbut {
+  font-family: var(--font-logo);
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1;
+  text-shadow: var(--text-shadow);
+  color: var(--branding-color);
+  text-decoration: none;
+  text-transform: capitalize;
+  padding: 1px 16px;
+  background: transparent;
+  border-radius: 40px 15px;
+  border: 4px double var(--branding-color);
+  transition: all 400ms ease-in-out;
+  cursor: pointer;
+}
+.navbar-brand:hover,
+.navbar-brand:focus {
+  color: white !important;
+  background: var(--branding-color);
 }
 /* TODO:Перемещение текста всплывающей подсказки  */
 .btn-container:has(> .tooltip) {
