--- a/css/menora.css
+++ b/css/menora.css
@@ -477,7 +477,7 @@
   position: absolute;
   bottom: 0;
   padding: 8px;
-  text-align: center;
+  /* text-align: center; */
   & p {
     color: rgba(255, 255, 255, 0.5);
   }
