--- a/css/main.css
+++ b/css/main.css
@@ -695,8 +695,24 @@ body .progressbar {
     color: #fd0116;
   }
   & strong {
+    font: italic 1.3em sans-serif;
     color: #fd6a01;
+    /* font-weight: 600; */
+    /* font-size: 1.3em; */
+  }
+  & p strong {
+    color: #fd0116;
+    font-weight: 600;
     font-size: 1.3em;
+  }
+  ul {
+    margin: 10px 3vw;
+  }
+  ul li {
+    font: italic 0.8em sans-serif;
+    color: #fd6a01;
+    list-style: inside;
+    text-align: left;
   }
 }
 @keyframes animateScroll {
