--- a/css/main.css
+++ b/css/main.css
@@ -110,7 +110,7 @@ footer {
 }
 .logo-tbut {
   font-family: var(--font-logo);
-  font-size: 20px;
+  font-size: 1.1em;
   font-weight: 700;
   line-height: 1;
   text-shadow: var(--text-shadow);
@@ -126,10 +126,11 @@ footer {
   transition: all 400ms ease-in-out;
   cursor: pointer;
 }
-.navbar-brand:hover,
-.navbar-brand:focus {
+.navbar-brand:hover {
   color: white !important;
-  background: var(--color-glass1);
+  font-size: 1.3em;
+  /* background: var(--color-glass1); */
+  /* transform: scale(1.1); */
 }
 /* TODO:Перемещение текста всплывающей подсказки  */
 .btn-container:has(> .tooltip) {
@@ -429,6 +430,8 @@ main {
   /* background: #222; */
   background: center/cover no-repeat var(--url-background-fon), var(--gradient-background-fon);
   background-blend-mode: soft-light;
+  /* background: center/cover no-repeat var(--url-background-fon); */
+  /* background-blend-mode: soft-light; */
   /* overflow: hidden; */
   background-attachment: fixed;
   /* filter: drop-shadow(0px 16px 15px #0e0314); */
